// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/fleet-members/StoreStatusStat Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="layout pa-4 column justify-center align-center"
  >
    <div
      class="flex display-3 grey--text"
    >
      
    0
  
    </div>
     
    <div
      class="flex grey--text text-uppercase font-weight-bold"
    >
      
    
  
    </div>
  </div>
</div>
`;

exports[`components/fleet-members/StoreStatusStat Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="layout pa-4 column justify-center align-center"
  >
    <div
      class="flex display-3 warning--text"
    >
      
    24
  
    </div>
     
    <div
      class="flex grey--text text-uppercase font-weight-bold"
    >
      
    Pending
  
    </div>
  </div>
</div>
`;
